Finalize API
